# cargo-funnel

./: Cargo.toml  LICENSE.md  Makefile.toml  README.md
.github/workflows/: check-pr-title.yml  clippy.yml  format.yml  test.yml
src/: app.rs  main.rs  util.rs
src/snapshots/: cargo_funnel__util__util_test__sort_package_fields_test__only_requires_name_and_version_if_publish_false.snap  cargo_funnel__util__util_test__sort_package_fields_test__orders_all_fields_correctly.snap
