[package]
name = "cargo-funnel"
version = "0.2.4"
authors = ["Tom Pridham <pridham.tom@gmail.com>"]
edition = "2018"
description = "cargo subcommand to reorganize and sort your Cargo.toml"
repository = "https://github.com/TomPridham/cargo-funnel"
readme = "README.md"
keywords = ["sort", "toml", "reorganize", "formatter"]
categories = ["development-tools::cargo-plugins"]
license = "MIT"

[dependencies]
cargo_metadata = "0.14.0"
clap = "2.33.3"
toml_edit = "0.2.1"
